# EarnAppMonitorAWSLambda

./: .gitignore  Pipfile  README.md  buildspec.yml  iam_settings.yml  lambda_function.py  main.py  package_and_deploy.sh  package_and_deploy.zsh  pyproject.toml  samconfig.toml  sample.env  sample_env.json  template.yml
dynamodb/: create_table.py
src/: create_table.py  lambda_function.py
test/unit/: test_device.py
