[project]
name = "earnappmonitorawslambda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "discord-webhook>=1.3.0",
    "email-validator>=2.3.0",
    "pydantic>=2.12.2",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "boto3>=1.40.53",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]
